--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,5 @@
 <div class="page">
     <div class="page-content">
-        <div class="block-title">HOME</div>
-        <div class="block">
-            Home content
-        </div>
+        <div id="map"></div>
     </div>
 </div>
