Vista about. Controles custom mapa

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,36 @@
     <div class="page-content">
         <div class="block-title">ABOUT</div>
         <div class="block">
-            about content
+            <h3>Evacuation Supporting System - User mobile application</h3>
+
+            <p><b>Abtract:</b> The response to natural disasters usually requires evacuation procedures that should be
+                followed in a quick and orderly fashion. While census data provide information on the population
+                distribution during sleeping hours, the evacuation procedure may arrive at any moment of the day,
+                even when people are not at home; e.g., in their daily activities. This particular situation causes
+                preparedness plans based on census information to become minimally effective; therefore, more dynamic
+                and context-aware strategies are required to properly address these evacuation processes. An evacuation
+                supporting system, based on IoT-networked devices, is proposed to guide people to safe places or
+                shelters once the alert of an extreme event has been issued. The system is interactive and support
+                crowd-sensing; this allows people to upload information on the state of the routes and the shelters,
+                thus keep an updated status of the evacuation routes. On one side, an evolutionary algorithm is proposed
+                to provide coverage in a breadcrumb deployment of information posts called witness units. The current
+                application, based on geographical information system, is presented as an intermediary between the
+                witness units and the users; this application guides people towards safe places or shelters.</p>
+
+            <p><b>Authors:</b> Gabriel M. Eggly<b><sup>1</sup></b>, José Mariano Finochietto<b><sup>2,3</sup></b>, Matías
+                Micheletto<b><sup>1</sup></b>, Roger Pueyo Centelles<b><sup>5</sup></b>, Rodrigo Santos<b><sup>1</sup></b>, Sergio
+                Ochoa<b><sup>4</sup></b>, Roc Meseguer<b><sup>5</sup></b>, Javier Orozco<b><sup>1</sup></b></p>
+
+            <p><b>Affiliations and E-mails:</b><br><b><sup>1</sup></b> Department of Electrical and Computers, Universidad Nacional del Sur, CONICET, Bahía
+                Blanca 8000, Argentina; <a href="mailto:gmeggly@gmail.com">gmeggly@gmail.com</a> (G.M.E.); <a href="mailto:matiasmicheletto@gmail.com">matiasmicheletto@gmail.com</a> (M.M.); <a href="mailto:ierms@uns.edu.ar">ierms@uns.edu.ar</a>
+                (R.M.S.); <a href="mailto:jadorozco@gmail.com">jadorozco@gmail.com</a> (J.O.) </p>
+            <p><b><sup>2</sup></b> GIDI, Department of Information Technology, Universidad Nacional de Mar del Plata, Mar del
+                Plata 7600, Argentina; <a href="mailto:mariano.fino@fi.mdp.edu.ar">mariano.fino@fi.mdp.edu.ar</a> or <a href="mailto:m.finochietto@spinalcom.com"></a></p>
+            <p><b><sup>3</sup></b> SpinalCom, 91400 Orsay, France</p>
+            <p><b><sup>4</sup></b> Department of Computer Science, Universidad de Chile, 8370456 Santiago, Chile;
+                <a href="mailto:sochoa@dcc.uchile.cl"></a></p>
+            <p><b><sup>5</sup></b> Department of Computer Architecture, Universitat Politècnica de Catalunya, 08034 Barcelona,
+                Spain; <a href="mailto:rpueyo@ac.upc.edu">rpueyo@ac.upc.edu</a> (R.P.C.); <a href="mailto:meseguer@ac.upc.edu">meseguer@ac.upc.edu</a> (R.M.)</p>
         </div>
     </div>
 </div>
