--- a/views/help.html
+++ b/views/help.html
@@ -1,8 +1,11 @@
 <div class="page">
     <div class="page-content">
-        <div class="block-title">HELP</div>
+        <div class="block-title">Instructions</div>
         <div class="block">
-            help content
+            <p>The map will show your current location in a blue marker, the evacuation path in a red route and nearest reported danger zones.</p>
+            <img src="custom/img/map_screenshot.png" class="help-img">
+            <p>Tap or click on any place on the map to report an event, or clicking the <i class="material-icons small">room</i> button to report an event in your current location.</p>
+            <img src="custom/img/events_screenshot.png" class="help-img">
         </div>
     </div>
 </div>
