--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -7,3 +7,11 @@
 .dialog-button {
     text-align: left!important;
 }
+
+.help-img{
+    min-width: 85%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
