Nuevas instrucciones de uso

--- a/views/help.html
+++ b/views/help.html
@@ -4,8 +4,10 @@
         <div class="block">
             <p>The map will show your current location in a blue marker, the evacuation path in a red route and nearest reported danger zones.</p>
             <img src="custom/img/map_screenshot.png" class="help-img">
-            <p>Tap or click on any place on the map to report an event, or clicking the <i class="material-icons small">room</i> button to report an event in your current location.</p>
+            <p>Tap or click on any place on the map to report an event. If the event is validated on the network, the border of the icon is red, otherwise the icon will be displayed with a gray border until the event is synchronized with the system.</p>
             <img src="custom/img/events_screenshot.png" class="help-img">
+            <p>Follow the instructions provided expanding the menu with the <img src="assets/css/routing-icon.png"> button.</p>
+            <img src="custom/img/route_screenshot.png" class="help-img">
         </div>
     </div>
 </div>
